# sismic-uav-planner

./: .gitignore  README.md  dune  dune-project  generate-data.sh  package-lock.json  package.json  tipe.opam
.github/: .git_commit_msg.txt
data/map/: map.qgz  map.qgz.qto3settings
data/test/: dune  permutation.txt  points2.txt  points5.txt
path/: annealing.ml  dune  geometric.ml  main.ml  matrix.ml  partition.ml  path.ml  prim.ml  prioq.ml  utils.ml
preview/: bezier.ml  bspline.py  chart.ml  dune  geojson.ml  plot.ml  preview.ml  scores.py  utils.ml
preview/plot-scripts/: bspline.py  classes.py  score.py  scores.py
src/: dune  main.ml  partition.ml  pathways.ml  prioq.ml  utils.ml
test/: fg  generator.c  points.txt  points2.txt  points3.txt  points4.txt
topography/: clustering.ml  clustering_first.ml  dune  precalculation.js  settings.json  topography.js  topography.ml  utils.ml
zones/: dune  geometric.ml  kcenters.ml  kmeans.ml  matrix.ml  utils.ml  zones.ml
